syntax = "proto3";

option csharp_namespace = "CrudAppGrpc";

package Crud;

service CrudService {
  rpc CreateItem (CreateItemRequest) returns (CreateItemResponse);
  rpc ReadItem (ReadItemRequest) returns (ReadItemResponse);
  rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse);
  rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse);
}

message Item {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateItemRequest {
  string name = 1;
  string description = 2;
}

message CreateItemResponse {
  string id = 1;
}

message ReadItemRequest {
  string id = 1;
}

message ReadItemResponse {
  Item item = 1;
}

message UpdateItemRequest {
  string id = 1;
  string name = 2;
  string description = 3;
}

message UpdateItemResponse {
  bool success = 1;
}

message DeleteItemRequest {
  string id = 1;
}

message DeleteItemResponse {
  bool success = 1;
}
